--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <version>1.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+
 
 
     </dependencies>
