--- a/pom.xml
+++ b/pom.xml
@@ -54,14 +54,11 @@
             <artifactId>jgrapht-core</artifactId>
             <version>1.3.0</version>
         </dependency>
-
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.1</version>
         </dependency>
-
-
 
 
     </dependencies>
